syntax = "proto3";

package chat;
//import "channel.proto";
//import "google/protobuf/timestamp.proto";

// Inputs are the request messages/objects that the client sends to the server as part of the service call requests.
message CreateChatGroupRequest {
    int64 owner_id = 1;
    string title = 2;
    int32 ttl_period = 3;
    repeated int64 user_ids = 4;
}

message ChannelEditAboutRequest {
    int64 id = 1;
    string about = 2;
}
